# musicopy

./: .gitignore  Cargo.toml  Justfile  README.md  build.gradle.kts  conveyor.conf
.cargo/: config.toml
.github/workflows/: android.yml  desktop.yml  test.yml
.run/: desktopHot.run.xml  desktopMobile.run.xml  sandbox.run.xml
composeApp/: build.gradle.kts  proguard-rules.pro
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/app/musicopy/: AppApplication.kt  AppForegroundService.kt  DirectoryPicker.android.kt  MainActivity.kt  Platform.android.kt  Previews.kt
composeApp/src/androidMain/kotlin/app/musicopy/ui/: QRScanner.android.kt
composeApp/src/androidMain/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  icon_mask.xml
composeApp/src/androidMain/res/values/: styles.xml
composeApp/src/androidMain/res/values-v31/: styles.xml
composeApp/src/androidMain/res/xml/: file_paths.xml
composeApp/src/commonMain/composeResources/drawable/: check_24px.xml  exclamation_24px.xml  favorite_24px.xml  feedback_24px.xml  heart_plus_24px.xml  icon.xml  more_horiz_24px.xml  more_vert_24px.xml  pause_24px.xml  refresh_24px.xml  settings_24px.xml
composeApp/src/commonMain/kotlin/app/musicopy/: App.kt  AppSettings.kt  CoreInstance.kt  DirectoryPicker.kt  Platform.kt  utils.kt
composeApp/src/commonMain/kotlin/app/musicopy/ui/: NodeStatusSheet.kt  QRScanner.kt  TranscodeFormatSheet.kt
composeApp/src/commonMain/kotlin/app/musicopy/ui/components/: AboutText.kt  TopBar.kt
composeApp/src/commonMain/kotlin/app/musicopy/ui/screens/: ConnectQRScreen.kt  DisconnectedScreen.kt  FeedbackScreen.kt  HomeScreen.kt  PreTransferScreen.kt  Screens.kt  SettingsScreen.kt  TransferScreen.kt  WaitingScreen.kt
composeApp/src/desktopMain/kotlin/app/musicopy/: DirectoryPicker.desktop.kt  Platform.jvm.kt  main.kt  mobile.kt  sandbox.kt
composeApp/src/desktopMain/kotlin/app/musicopy/ui/: ConnectWidget.kt  DesktopApp.kt  DesktopHome.kt  JobsWidget.kt  LibraryWidget.kt  QRScanner.desktop.kt  SettingsWidget.kt
composeApp/src/desktopMain/kotlin/app/musicopy/ui/components/: ScrollableContainer.kt
composeApp/src/desktopMain/kotlin/app/musicopy/ui/screenshots/: DesktopHeroScreenshot.kt  DesktopHomeEmptyScreenshot.kt  DesktopHomeScreenshot.kt  data.kt  (+6 more)
composeApp/src/iosMain/kotlin/app/musicopy/: BookmarkResolver.kt  DirectoryPicker.ios.kt  MainViewController.kt  Platform.ios.kt
composeApp/src/iosMain/kotlin/app/musicopy/ui/: QRScanner.ios.kt
crates/musicopy/: Cargo.toml
crates/musicopy-transcode/: Cargo.toml
crates/musicopy-transcode/examples/: hash.rs  transcode.rs
crates/musicopy-transcode/src/: hash.rs  lib.rs
crates/musicopy-tui/: Cargo.toml
crates/musicopy-tui/src/: app.rs  main.rs
crates/musicopy-tui/src/ui/: log.rs  mod.rs
crates/musicopy/src/: database.rs  device_name.rs  lib.rs  logging.rs  node.rs  protocol.rs
crates/musicopy/src/fs/: android.rs  ios.rs  ios_uniffi.rs  mod.rs
crates/musicopy/tests/: integration.rs
crates/musicopy/tests/common/: mod.rs
docs/: CONTRIBUTING.md  IOS.md  RELEASING.md
gradle/: libs.versions.toml
iosApp/iosApp/: Info.plist  iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
nix/: flake.nix
web/: astro.config.mjs  package.json  pnpm-lock.yaml
web/src/: styles.css
web/src/components/: BaseLayout.astro  FilledButtonLink.astro  Footer.astro  Nav.astro  Tile.astro
web/src/components/fragments/: DownloadTiles.astro  InfoTiles.astro  ManualInstructions.astro
web/src/components/fragments/guideSections/: AddYourMusicSection.astro  ConnectYourPhoneSection.astro  GuideImage.astro  SpotifyDownloadFolderSection.astro  TransferYourFilesSection.astro
web/src/pages/: 404.astro  contact.astro  demo.astro  download.astro  index.astro  license-confirmation.astro  license.astro  privacy.astro
web/src/pages/guide/: spotify-local-files.astro
web/src/pages/manual/: index.astro  transcoding.astro
(+2 files in other folders)
