[package]
name = "musicopy-transcode"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
image = "0.25.6"
log = "0.4.27"
ogg = "0.9.2"
opus = { git = "https://github.com/fractalbeauty/opus-rs.git", branch = "unsafe-libopus" }
rubato = "0.16.2"
symphonia = { git = "https://github.com/pdeljanov/Symphonia.git", branch = "dev-0.6", features = ["all"] }
