[package]
name = "musicopy-transcode"
version = "0.1.0"
edition = "2024"

[features]
default = ["transcode"]
transcode = [
    "base64",
    "id3",
    "image",
    "tracing",
    "mp3lame-encoder",
    "ogg",
    "opus",
    "rubato",
    "symphonia",
    "twox-hash",
]

[dependencies]
anyhow = "1.0.98"

base64 = { version = "0.22.1", optional = true }
id3 = { version = "1.16.4", optional = true }
image = { version = "0.25.6", optional = true }
tracing = { version = "0.1.44", optional = true }
mp3lame-encoder = { version = "0.2.3", optional = true }
ogg = { version = "0.9.2", optional = true }
opus = { git = "https://github.com/fractalbeauty/opus-rs.git", branch = "unsafe-libopus", optional = true }
rubato = { version = "0.16.2", optional = true }
symphonia = { version = "0.6.0-alpha.2", features = ["all"], optional = true }
twox-hash = { version = "2.1.0", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
