[package]
name = "musicopy-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
musicopy = { path = "../musicopy" }

anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = "1.45.1"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tui-widgets = "0.4.1"
