[package]
name = "musicopy"
version = "0.1.0"
edition = "2024"

[features]
test-hooks = []

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "musicopy"

[dependencies]
anyhow = "1.0.98"
arc-swap = "1.7.1"
async-std = "1.13.1"
async-stream = "0.3.6"
dashmap = "6.1.0"
directories-next = "2.0.0"
dunce = "1.0.5"
flate2 = "1.1.5"
futures = "0.3.31"
globwalk = "0.9.1"
hex = "0.4.3"
iroh = "0.98.1"
itertools = "0.14.0"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
logroller = "0.1.10"
tracing = "0.1.44"
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
n0-future = "0.1.3"
path-slash = "0.2.1"
postcard = { version = "1.1.1", features = ["alloc"] }
priority-queue = "2.5.0"
rayon = "1.10.0"
rusqlite = { version = "0.36.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = "1.45.1"
tokio-util = { version = "0.7.15", features = ["io"] }
uniffi = { version = "=0.29.4", features = [] }
url = "2.5.7"
whoami = { version = "2.0.0-pre.3" }
zbase32 = "0.1.2"
crc = "3.4.0"
serde_with = { version = "3.18.0", features = ["macros"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
musicopy-transcode = { path = "../musicopy-transcode", default-features = false, features = [
    "transcode",
] }

rfd = "0.15.3"

[target.'cfg(target_os = "android")'.dependencies]
musicopy-transcode = { path = "../musicopy-transcode", default-features = false, features = [
] }

jni = "0.21.1"
ndk-context = "0.1.1"
tracing-android = "0.2.0"

[target.'cfg(target_os = "ios")'.dependencies]
musicopy-transcode = { path = "../musicopy-transcode", default-features = false, features = [
] }

base64 = "0.22.1"
objc2 = "0.6.3"
objc2-core-foundation = "0.3.2"
tracing-oslog = "0.3.0"

[dev-dependencies]
testdir = "0.9.3"
